# mcufont

./: .clang-format  .editorconfig  CMakeLists.txt  README.rst
decoder/: mf_bwfont.c  mf_bwfont.h  mf_config.h  mf_encoding.c  mf_encoding.h  mf_font.c  mf_font.h  mf_justify.c  mf_justify.h  mf_kerning.c  mf_kerning.h  mf_rlefont.c  mf_rlefont.h  mf_scaledfont.c  mf_scaledfont.h  mf_wordwrap.c  mf_wordwrap.h
encoder/: Makefile  bdf_import.cc  bdf_import.hh  ccfixes.hh  datafile.cc  datafile.hh  encode_rlefont.cc  encode_rlefont.hh  export_bwfont.cc  export_bwfont.hh  export_rlefont.cc  export_rlefont.hh  exporttools.cc  exporttools.hh  freetype_import.cc  freetype_import.hh  importtools.cc  importtools.hh  main.cc  optimize_rlefont.cc  optimize_rlefont.hh
examples/render_bmp/: render_bmp.c
fonts/: Makefile  SourceCodePro_Regular20.c  fonts.h
