cmake_minimum_required(VERSION 3.1...3.22)

project(mcufont
  VERSION 1.0
  LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# add_library(mcufont src/.cpp)

# target_include_directories(mcufont
#     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/fonts
#     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/decoder
# )
